<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libcec</name>
  <version>6.0.2</version>
  <description>USB CEC Adapter communication Library</description>
  <maintainer email="opdenkamp@users.noreply.github.com">Lars Op den Kamp</maintainer>
  <license file="COPYING">GPL-2.0-or-later</license>

  <url type="website">http://libcec.pulse-eight.com</url>
  <url type="bugtracker">https://github.com/Pulse-Eight/libcec/issues</url>
  <url type="repository">https://github.com/Pulse-Eight/libcec</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libudev-dev</build_depend>
  <build_depend>p8-platform</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
